--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,21 +25,24 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.image-zoom-wrapper {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
+  .image-zoom-wrapper {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
 
-.image-zoom-wrapper > span {
-  display: inline-block;
-}
+  .image-zoom-wrapper > span {
+    display: inline-block;
+  }
 
-.image-zoom-wrapper img {
-  border-radius: 8px !important; /* usa !important para sobreescribir posibles estilos */
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1) !important;
-  cursor: zoom-in !important;
-  display: block !important;
-  transition: box-shadow 0.3s ease;
-}
+  .image-zoom-wrapper img {
+    border-radius: 8px !important; /* usa !important para sobreescribir posibles estilos */
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1) !important;
+    cursor: zoom-in !important;
+    display: block !important;
+    transition: box-shadow 0.3s ease;
+  }
 
+.medium-zoom-overlay {
+  background: rgba(0, 0, 0, 0.8) !important;
+}
